# workout-app

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/src/: app.py  cleaners.py
backend/src/app/: __init__.py
backend/src/models/: OutClean.py  README.md  UniClean.py  cleaners.py  encoder.py  predict.py  predictor.py  predictor.py~  scheduler.py  testcounts.csv
backend/tests/: test_scheduler.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Calendar.tsx  Toast.tsx  Typography.tsx
frontend/src/components/ui/: date-range-picker.tsx  time-picker-input.tsx  time-picker-utils.tsx
frontend/src/services/: schedule.tsx
